# pixel-canvas

./: README.md
backend/pixel-canvas/: pixel-canvas.sln
backend/pixel-canvas/pixel-canvas-server/: Client.cs  Log.cs  Program.cs  Server.cs  pixel-canvas-server.csproj
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  style.css  style.scss
frontend/src/: main.rs
